Update image upload logic

--- a/Gui/src/app/add-content/ingredient/ingredient.component.html
+++ b/Gui/src/app/add-content/ingredient/ingredient.component.html
@@ -61,7 +61,7 @@
                 </mat-form-field>
             </div>
 
-            <button class="float-right" mat-raised-button color="primary">Add Ingredient</button>
+            <button class="float-right" mat-raised-button color="primary">Add</button>
             <br><br>
 
         </form>
