--- a/Gui/src/app/edit-content/ingredient/edit-ingredient/edit-ingredient.component.html
+++ b/Gui/src/app/edit-content/ingredient/edit-ingredient/edit-ingredient.component.html
@@ -61,8 +61,9 @@
                 </mat-form-field>
             </div>
 
-            <button class="float-left" mat-raised-button color="warn" (click)="deleteIngredient()">Delete Ingredient</button>
-            <button class="float-right" mat-raised-button color="primary" (click)="onSubmit()">Update Ingredient</button>
+            <button class="float-left"mat-raised-button color="secondary" (click)="goBack()">Cancel</button>
+            <button mat-raised-button color="warn" (click)="deleteIngredient()">Delete</button>
+            <button class="float-right" mat-raised-button color="primary" (click)="onSubmit()">Update</button>
             <br><br>
 
         </form>
