Working through recipe backend

--- a/Gui/src/app/add-content/ingredient/ingredient.component.html
+++ b/Gui/src/app/add-content/ingredient/ingredient.component.html
@@ -24,6 +24,7 @@
              <br>
              <p class="h4">Add Ingredient</p>
 
+            <mat-card>
             <div class="row">
                 <mat-form-field class="col-12">
                     <mat-label>Name</mat-label>
@@ -59,10 +60,9 @@
                     <textarea  formControlName="note" matInput placeholder="Ex. My favorite ingredient from the local farmer's market!"></textarea>
                 </mat-form-field>
             </div>
-
+        </mat-card>
+        <br>
             <button class="float-right" mat-raised-button color="primary">Add</button>
-            <br><br>
-
         </form>
         
     </div>
