--- a/Gui/src/app/add-content/recipe/recipe.component.html
+++ b/Gui/src/app/add-content/recipe/recipe.component.html
@@ -20,30 +20,62 @@
             <input matInput placeholder="Ex. Cinnamon Rolls">
           </mat-form-field>
 
-          <mat-form-field class="col-6">
-            <mat-label>Cuisine Type</mat-label>
-            <input matInput placeholder="Ex. Cinnamon Rolls">
+
+          <mat-form-field class="col-12">
+            <mat-label>Cuisine Type(s)</mat-label>
+            <mat-select required>
+              <mat-option> American </mat-option>
+              <mat-option> French </mat-option>
+            </mat-select>
           </mat-form-field>
 
-          <mat-form-field class="col-6">
-            <mat-label>Yield</mat-label>
-            <input matInput placeholder="Ex. 12 Rolls">
-          </mat-form-field>
 
-          <mat-form-field class="col-4">
+          <mat-form-field class="col-6">
             <mat-label>Prep Time</mat-label>
             <input matInput placeholder="Ex. 2.4">
           </mat-form-field>
 
-        <mat-form-field class="col-4">
+          <mat-form-field class="col-6">
+            <mat-label>Units</mat-label>
+            <mat-select required>
+              <mat-option> Hours </mat-option>
+              <mat-option> Minutes </mat-option>
+              <mat-option> Seconds </mat-option>
+            </mat-select>
+          </mat-form-field>
+
+        <mat-form-field class="col-6">
             <mat-label>Cook Time</mat-label>
             <input matInput placeholder="Ex. 2.4">
           </mat-form-field>
 
-          <mat-form-field class="col-4">
+          <mat-form-field class="col-6">
+            <mat-label>Units</mat-label>
+            <mat-select required>
+              <mat-option> Hours </mat-option>
+              <mat-option> Minutes </mat-option>
+              <mat-option> Seconds </mat-option>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-form-field class="col-6">
             <mat-label>Temp</mat-label>
             <input matInput placeholder="Ex. 2.4">
           </mat-form-field>
+
+          <mat-form-field class="col-6">
+            <mat-label>Units</mat-label>
+            <mat-select required>
+              <mat-option> FH </mat-option>
+              <mat-option> C </mat-option>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-form-field class="col-12">
+            <mat-label>Yield</mat-label>
+            <input matInput placeholder="Ex. 12 Rolls">
+          </mat-form-field>
+
 
         </mat-card>
 
